--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: Arial, sans-serif;
             color: #fff; /* White text for contrast */
-            background-image: url('https://via.placeholder.com/1500'); /* Replace with the direct URL of the Instagram image */
+            background-image: url('376640564_684985806875751_8479865405210081658_n.jpg'); /* Replace with the direct URL of the Instagram image */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
