--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
         /* Header styling */
         header {
-            background-color: #333;
-            color: #d4af37;
+            color: #d4af37; /* Gold color for title */
             padding: 20px;
             text-align: center;
         }
@@ -75,10 +74,9 @@
 
         /* Footer styling */
         footer {
-            background-color: #333;
             padding: 15px;
             text-align: center;
-            color: #d4af37;
+            color: #d4af37; /* Gold color for footer text */
         }
     </style>
 </head>
